font size changes and spacing fix

--- a/src/portfolio/content_about/style.scss
+++ b/src/portfolio/content_about/style.scss
@@ -25,13 +25,13 @@
       }
 
       &-desc {
-        margin: 80px 0;
+        margin: 40px 0;
         line-height: 1.1em;
         font-size: 40px;
         font-family: "Playfair", "Manrope", sans-serif;
 
         @media  #{media.$xsmall-and-down} {
-          font-size: 4.6vw;
+          font-size: 6vw;
         }
       }
     }
