--- a/src/portfolio/content_top/style.scss
+++ b/src/portfolio/content_top/style.scss
@@ -26,8 +26,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 70%;
-      height: 70%;
+      width: 75%;
+      height: 75%;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
@@ -37,7 +37,7 @@
 
       @media  #{media.$xsmall-and-down} {
         width: 90%;
-        height: 50%;
+        height: 60%;
       }
     }
 
